syntax = "proto3";

package access_v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/drizzleEnt/auth/pkg/access_v1;access_v1";

service AccessV1{
    rpc Check(CheckRequest) returns (google.protobuf.Empty);
    rpc GetName(google.protobuf.Empty) returns(GetNameResponse);
}

message CheckRequest{
    string endpoint_address = 1;
}

message GetNameResponse{
    string name = 1;
}

